--- a/test.html.erb
+++ b/test.html.erb
@@ -7,9 +7,16 @@
     <% require 'pg' %>
     <% connection = PG::connect(dbname: "goya") %>
     <% connection.internal_encoding = "UTF-8" %>
+    
+    <% result = connection.exec("select weight, give_for from crops;") %>
+    <% data1 = [] %>
+    <% result.each do |record| %>
+      <%  data1 << "La taille de la courge amère：#{record["weight"]}　Qui a vendu：#{record["give_for"]}" %>
+    <% end %>
+    
     <form action="indicate.cgi" method="POST">
-       Please enter the characters below<br><br>
-      <input type="text"  name="input" ><br>
+       Press the button below to jump to the information page of the size of bitter gourd and the person who sold it.<br><br>
+      <input type="text"  name="inp" value="<%= data1.join(' ') %>" ><br>
       <input type="submit" name="Send" >
     </form>
     <% result = connection.exec("SELECT length,weight,crops.give_for,date,prices.price FROM crops JOIN prices ON crops.give_for = prices.give_for WHERE quality = false;") %>
@@ -17,8 +24,9 @@
     <% result.each do |record| %>
       <%  data << "The size of bitter gourd：#{record["weight"]}, it length is: #{record["length"]},　Who sold：#{record["give_for"]}, at #{record["price"]}, on #{record["date"]}             " %>
     <% end %>
+         
     <form action="goya.cgi" method="POST">
-       Press the button below to jump to the information page of the size of bitter gourd and the person who sold it.<br><br>
+       Press the button below to jump to the information page of bad quality of the bitter gourd .<br><br>
        <!-- Substitute the data you want to send for value -->
        <!-- Use name = "goya" as a marker for information -->
       <input type="text" name="goya" value="<%= data.join(' ') %>">
